# bayesian-colormodeling

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  setup.cfg
data/: bayesian_color_model.npy  color_classifier_gmm.joblib
src/: main.py  utils.py
src/libs/: crf_refiner.py  custom_stream_formatter.py  gmm.py  utils_graphics.py
